SW-6109 - UAT: show more button spacing issues

--- a/src/components/faqs/sass/faqs.scss
+++ b/src/components/faqs/sass/faqs.scss
@@ -53,7 +53,7 @@
 	.btn-faq-more {
 		background: none;
 	    min-width: 160px;
-	    width: auto;
+	    width: auto !important;
 	    padding: 10px 0;
 	    padding-right: 40px;
 	    margin: 0 auto;
